--- a/portfolio-app/src/index.html
+++ b/portfolio-app/src/index.html
@@ -13,6 +13,7 @@
   <script>
     function menuFunction(x) {
       x.classList.toggle("change");
+      document.querySelector(".menuClosed").className = "menuPanel";
     }
   </script>
 </body>
