Revert "Finishing menu panel"
This reverts commit 9e238423e4ed5fb2d312ef106b6f367ef8ba04b9.

--- a/portfolio-app/src/index.html
+++ b/portfolio-app/src/index.html
@@ -10,5 +10,11 @@
 </head>
 <body>
   <app-root></app-root>
+  <script>
+    function menuFunction(x) {
+      x.classList.toggle("change");
+      document.querySelector(".menuClosed").className = "menuPanel";
+    }
+  </script>
 </body>
 </html>
